--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,13 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'org.postgresql:postgresql'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation fileTree(dir: 'lib', include: ['*.jar'])
+//	testCompile 'org.springframework.test.htmlunit:spring-test-htlmunit:1.0.0.RC1'
 }
 
 test {
